# wxsf-code

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  annotated.html  annotated_dup.js  changes.txt  classes.html  configure  dir_000007_000008.html  dir_1036706e55c22cab35bc1c58ee689f1d.html  dir_1036706e55c22cab35bc1c58ee689f1d_dep.map  dir_1036706e55c22cab35bc1c58ee689f1d_dep.md5  dir_27c639f2388fee9633e4f0b51826723c.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2_dep.map  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2_dep.md5  dir_629f8151d55d307162ff2d619fb1783d.html  dir_629f8151d55d307162ff2d619fb1783d_dep.map  dir_629f8151d55d307162ff2d619fb1783d_dep.md5  dir_a91ad4dfdef84dee088933429d66c922.html  dir_a91ad4dfdef84dee088933429d66c922_dep.map  dir_a91ad4dfdef84dee088933429d66c922_dep.md5  dir_bc13dfdb7e0059fe79a6dea7fdf0f62d.html  dir_bc13dfdb7e0059fe79a6dea7fdf0f62d_dep.map  dir_bc13dfdb7e0059fe79a6dea7fdf0f62d_dep.md5  dir_bc332851c4b909c561803c9f4d02e9c2.html  dir_bc332851c4b909c561803c9f4d02e9c2_dep.map  dir_bc332851c4b909c561803c9f4d02e9c2_dep.md5  dir_d01f1130a4ee029ebd66695fd11bbd16.html  dir_d01f1130a4ee029ebd66695fd11bbd16_dep.map  dir_d01f1130a4ee029ebd66695fd11bbd16_dep.md5  dir_d4040b55343c93fc7d643ad4cc1d787b.html  dir_d4040b55343c93fc7d643ad4cc1d787b_dep.map  dir_d4040b55343c93fc7d643ad4cc1d787b_dep.md5  files.html  files_dup.js  functions.html  functions_a.html  functions_b.html  (+120 more)
.github/workflows/: ccpp.yml  doxygen-gh-pages.yml
d0/d11/: classwx_s_f_shape_paste_event.html  classwx_s_f_shape_paste_event.js
d0/d1b/: classwx_s_f_round_ortho_line_shape__coll__graph.map  classwx_s_f_round_ortho_line_shape__coll__graph.md5
d0/d22/: wx_shape_framework_8h__incl.map  wx_shape_framework_8h__incl.md5
d0/d2d/: classwx_s_f_content_ctrl__inherit__graph.map  classwx_s_f_content_ctrl__inherit__graph.md5
d0/d47/: classwx_s_f_layout_horizontal_tree.html  classwx_s_f_layout_horizontal_tree.js
d0/d56/: structwx_s_f_ortho_line_shape_1_1___s_e_g_m_e_n_t_c_p_s.html  structwx_s_f_ortho_line_shape_1_1___s_e_g_m_e_n_t_c_p_s.js
d0/d60/: classwx_s_f_control_shape.html  classwx_s_f_control_shape.js
d0/d66/: classwx_s_f_open_arrow__inherit__graph.map  classwx_s_f_open_arrow__inherit__graph.md5
d0/d7e/: _diamond_arrow_8h__incl.map  _diamond_arrow_8h__incl.md5
d0/d85/: _printout_8h.html  _printout_8h.js
d0/db3/: _grid_shape_8h__dep__incl.map  _grid_shape_8h__dep__incl.md5
d0/de3/: _canvas_state_8h.html  _canvas_state_8h.js
d1/d05/: classwx_s_f_open_arrow__coll__graph.map  classwx_s_f_open_arrow__coll__graph.md5
d1/d18/: classwx_s_f_edit_text_shape__inherit__graph.map  classwx_s_f_edit_text_shape__inherit__graph.md5  classwx_s_f_text_shape__inherit__graph.map  classwx_s_f_text_shape__inherit__graph.md5
doc/: Doxyfile  DoxyfileWin  wxShapeFramework.chm
example/: Art.h  FrameCanvas.cpp  FrameCanvas.h  Ids.h  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  _wx_intellisense_28.h  fileversion.cpp  fileversion.h  resource.rc  wxSFDemo.Linux.cbp  wxSFDemo.cbp  wxSFDemo.depend  wxSFDemo.vcproj  wx_pch.h
include/: ArrowBase.h  BitmapShape.h  CanvasHistory.h  CanvasState.h  CircleShape.h  CommonFcn.h  CurveShape.h  Defs.h  DiagramManager.h  DiamondShape.h  EditTextShape.h  EllipseShape.h  FixedRectShape.h  LineShape.h  MultiSelRect.h  OpenArrow.h  PolygonShape.h  RectShape.h  RoundRectShape.h  SFEvents.h  ScaledPaintDC.h  ShapeBase.h  ShapeCanvas.h  ShapeDataObject.h  ShapeHandle.h  SolidArrow.h  TextShape.h  XmlSerializer.h  wxShapeFramework.h
samples/: CMakeLists.txt  README.md
samples/wxSFDemo/: Art.h  CMakeLists.txt  FrameCanvas.cpp  FrameCanvas.h  GUI.cpp  GUI.fbp  GUI.h  Ids.h  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  premake.lua  wx_pch.h
samples/wxSFDemo/res/: AlignLeft.xpm  Bitmap.xpm  Circle.xpm  Curve.xpm  Diamond.xpm  EditText.xpm  Ellipse.xpm  FixedRect.xpm  FlexGrid.xpm  Line.xpm  Rect.xpm  RoundRect.xpm  Shadow.xpm  Text.xpm
samples/wxSFSample1/: CMakeLists.txt  premake.lua  wxSFSample1.Linux.cbp  wxSFSample1.cbp  wxSFSample1.vcproj  wxSFSample1App.cpp  wxSFSample1Main.cpp  wxSFSample1Main.h  wx_pch.h
samples/wxSFSample2/: CMakeLists.txt  SampleCanvas.cpp  SampleCanvas.h  SampleShape.cpp  premake.lua  wxSF.rc  wxSFSample2.Linux.cbp  wxSFSample2.cbp  wxSFSample2.vcproj  wxSFSample2App.cpp  wxSFSample2App.h  wxSFSample2Main.cpp  wxSFSample2Main.h  wx_pch.h
samples/wxSFSample3/: CMakeLists.txt  StarShape.cpp  StarShape.h  premake.lua  wxSFSample3.Linux.cbp  wxSFSample3.cbp  wxSFSample3.vcproj  wxSFSample3App.cpp  wxSFSample3App.h  wxSFSample3Main.cpp  wxSFSample3Main.h  wxSFvs2005.rc  wx_pch.h
samples/wxSFSample3/res/: wx.xpm
samples/wxSFSample4/: CMakeLists.txt  premake.lua  wxSFSample4.cbp  wxSFSample4App.cpp  wxSFSample4App.h  wxSFSample4Main.cpp  wxSFSample4Main.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  (+68 more)
src/: ArrowBase.cpp  AutoLayout.cpp  BitmapShape.cpp  BitmapShapeXml.cpp  CMakeLists.txt  CanvasHistory.cpp  CanvasState.cpp  CircleArrow.cpp  CircleShape.cpp  CommonFcn.cpp  ControlShape.cpp  CurveShape.cpp  CurveShapeXml.cpp  DiagramManager.cpp  DiamondArrow.cpp  DiamondShape.cpp  EditTextShape.cpp  EllipseShape.cpp  FixedRectShape.cpp  FlexGridShape.cpp  GUI.fbp  GridShape.cpp  LineShape.cpp  LineShapeXml.cpp  MultiSelRect.cpp  OpenArrow.cpp  OrthoShape.cpp  PolygonShape.cpp  PolygonShapeXml.cpp  Printout.cpp  RectShape.cpp  RectShapeXml.cpp  RoundRectShape.cpp  RoundRectShapeXml.cpp  SFEvents.cpp  ScaledDC.cpp  ScaledDC.h  ScaledPaintDC.cpp  ShapeBase.cpp  ShapeBaseXml.cpp  (+14 more)
src/wxxmlserializer/: PropertyIO.cpp  XmlSerializer.cpp  XmlSerializerConv.cpp  wx_pch.h
(+642 files in other folders)
